# n_launcher

./: .gitignore  Cargo.toml
.fleet/: run.json
.github/workflows/: rust.yml
dev_data/: version.json
n_launcher_proc/: Cargo.toml
n_launcher_proc/src/: lib.rs
src/: command.rs  data.rs  dev_data.rs  lib.rs  main.rs  technic.rs
ui/: app.slint
