[package]
name = "n_launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
slint = "1.0.2"
n_launcher_proc = { path = "n_launcher_proc" }
openssl = "0.10"

[build-dependencies]
slint-build = "1.0.2"

[features]
vendored = ["openssl/vendored"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"